--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sxjs",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "description": "SX - Stable Asset Liquidity Exchange",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -32,11 +32,10 @@
   },
   "homepage": "https://github.com/stableex/sx.js#readme",
   "devDependencies": {
-    "@babel/preset-typescript": "^7.8.3",
     "@rollup/plugin-commonjs": "*",
     "@rollup/plugin-node-resolve": "*",
     "@types/jest": "*",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
     "eosjs": "^21.0.1-rc2",
     "eslint": "*",
@@ -44,7 +43,7 @@
     "jest": "*",
     "node-fetch": "*",
     "rollup": "*",
-    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-cleaner": "*",
     "rollup-plugin-copy": "*",
     "rollup-plugin-peer-deps-external": "*",
     "rollup-plugin-progress": "*",
