--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sxjs",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "SX - Stable Asset Liquidity Exchange",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -41,6 +41,6 @@
     "typescript": "*"
   },
   "dependencies": {
-    "eos-common": "^0.7.2"
+    "eos-common": "0.7.3"
   }
 }
